--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -126,14 +126,14 @@ separator=false
 # Date Time
 #
 [time]
-command=date '+%Y/%m/%d'
+command=date '+%a, %b %d, %Y'
 interval=600
 label=
 separator=false
 
 [time]
 command=date '+%Hh%Mm'
-interval=30
+interval=15
 label=
 
 # Generic media player support
