--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -33,16 +33,16 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
+#[volume]
 #label=VOL
 #label=♪
-label= 
-instance=Master
+#label= 
+#instance=Master
 #instance=PCM
-interval=1 #once
-signal=10
+#interval=1 #once
+#signal=10
 #command=/usr/lib/i3blocks/volume 5 pulse
-separator=false
+#separator=false
 
 # Memory usage
 #
