--- a/config
+++ b/config
@@ -13,12 +13,13 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-#font pango:monospace 8 #original
-font pango:System San Francisco Display 10
+font pango:monospace 6 #original
+#font pango:System San Francisco Display 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
+font pango:monospace 10
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -30,6 +31,10 @@ font pango:System San Francisco Display 10
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Set pamac-manager to work
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & eval $(gnome-keyring-daemon -s --components=pkcs11,secrets,ssh,gpg) &
+
+
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 
@@ -40,24 +45,31 @@ bindsym $mod+Shift+q kill
 exec --no-startup-id libinput-gestures-setup start
 
 # start dmenu (a program launcher)
-bindsym $mod+shift+space exec dmenu_run
+bindsym $mod+space exec dmenu_run
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+shift+space exec --no-startup-id i3-dmenu-desktop
 
 # dmenu alternative: rofi
 #bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 800 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "System San Francisco Display 18"
 #bindsym $mod+space exec rofi -show drun
 
 # loading COMPTON to add effects and transparency
-exec_always compton -f
+#exec_always compton -f
+
+# Load wallpaper with nitrogen
+exec --no-startup-id nitrogen --restore
 
 # locking screen
 set $Locker i3lock -i /home/edu/Pictures/illyria-default-blur.png -t && sleep 1
 
 bindsym $mod+x exec $Locker
+
+# backup utilities
+bindsym $mod+shift+b exec grsync
+bindsym $mod+b exec timeshift-launcher
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -122,6 +134,9 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
+# take screenshot
+bindsym $mod+shift+s exec spectacle
+
 # toggle tiling / floating
 bindsym $mod+Shift+f floating toggle
 
@@ -167,16 +182,16 @@ bindsym $mod+m workspace next_on_output
 bindsym $mod+n workspace prev_on_output
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 move container to workspace $ws1; workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2; workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3; workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4; workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5; workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6; workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9; workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10; workspace $ws10
 
 # Assign programs to workspaces
 assign [class="Chromium"] workspace $ws1
@@ -259,8 +274,8 @@ bindsym $mod+shift+x mode "$mode_system"
 # finds out, if available)
 bar {
         status_command i3blocks -c ~/.config/i3/i3blocks.conf #or i3status
-	#font pango:System San Francisco Display 10
-	position bottom #or top
+	font pango:System San Francisco Display 10
+	position top #or bottom
         colors {
 		background $bg-color
 	    	separator #757575
@@ -271,12 +286,17 @@ bar {
 	}
 }
 
+
+# loading Nvidia settings
+exec --no-startup-id nvidia-settings --load-config-only
+
 #opening apps
 #exec --no-startup-id xfsettingsd --sm-client-disable &
-exec --no-startup-id /usr/bin/blueman-applet         			# Bluetooth Manager
-exec --no-startup-id xautolock -time 1 -corners --00 -locker $Locker &  # Screen locker
-exec --no-startup-id /usr/bin/nm-applet --sm-disable        		# Network Manager
-exec --no-startup-id volumeicon						# volume tray control
-exec --no-startup-id /usr/bin/xfce4-power-manager           		# Power Manager
-exec --no-startup-id chromium
-exec --no-startup-id parcellite						# clipboard manager
+exec --no-startup-id /usr/bin/blueman-applet					# Bluetooth Manager
+exec --no-startup-id xautolock -time 1 -locker "$Locker" -corners --00 &	# Screen locker
+exec --no-startup-id /usr/bin/nm-applet --sm-disable        			# Network Manager
+exec --no-startup-id /usr/bin/xfce4-power-manager           			# Power Manager
+exec --no-startup-id volumeicon							# volume icon/control
+exec --no-startup-id parcellite							# clipboard manager
+exec --no-startup-id pamac-tray							# update manager
+exec chromium
