--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -101,11 +101,11 @@ markup=none
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[cpu_usage]
-#label=CPU
-#interval=10
+[cpu_usage]
+label=
+interval=10
 #min_width=CPU: 100.00%
-#separator=false
+separator=false
 
 [load_average]
 interval=10
@@ -133,7 +133,7 @@ separator=false
 
 [time]
 command=date '+%Hh%Mm'
-interval=15
+interval=30
 label=
 
 # Generic media player support
